[package]
name = "tileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1.37", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
gdal = { version = "0.16", features = ["bindgen"] }
image = "0.25"
http-body-util = "0.1.2"
