[package]
name = "tileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5", features = ["full"] }
tokio = { version = "1.40", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
gdal = { version = "0.17", features = ["bindgen"] }
image = "0.25"
http-body-util = "0.1.2"
webp = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.92"
thiserror = "2.0.9"
url = "2.5.4"
itertools = "0.13.0"
